--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     def recyclerview_version = "1.2.0-alpha01"
     def appcompat_version = "1.2.0-alpha01"
     def alert_version = "1.2.0"
+    def circleimageview_version = "2.2.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Kotlin
@@ -82,6 +83,9 @@ dependencies {
 
     // Alert dialog
     implementation "com.kaopiz:kprogresshud:$alert_version"
+
+    // Circle imageview
+    implementation "de.hdodenhof:circleimageview:$circleimageview_version"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
