--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,11 +14,27 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
+
     }
+
     buildTypes {
+        def BASE_URL = "BASE_URL"
         release {
             minifyEnabled false
+            debuggable false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', BASE_URL, '"https://api.pobble.io/dev/"'
+        }
+        debug {
+            minifyEnabled true
+            debuggable true
+            buildConfigField 'String', BASE_URL, '"https://api.pobble.io/dev/"'
         }
     }
 
@@ -30,6 +46,12 @@ android {
     // Enable extension
     androidExtensions {
         experimental = true
+    }
+
+    // OKhttp3 need java 8 for run
+    compileOptions {
+        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
     }
 }
 
@@ -48,6 +70,10 @@ dependencies {
     def appcompat_version = "1.2.0-alpha01"
     def alert_version = "1.2.0"
     def circleimageview_version = "2.2.0"
+    def room_version = "1.1.1"
+    def worker_version = "2.1.0"
+    def retrofit_version = "2.5.0"
+    def okhttp_version = "3.14.2"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Kotlin
@@ -87,10 +113,24 @@ dependencies {
     // Circle imageview
     implementation "de.hdodenhof:circleimageview:$circleimageview_version"
 
+    // Networking
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Room
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
+    // Worker manager
+    implementation "androidx.work:work-runtime:$worker_version"
 }
