--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,12 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
     buildTypes {
         release {
@@ -37,17 +43,18 @@ dependencies {
 
     def multidex_version = "1.0.3"
     def koin_version = "2.0.1"
-    def material_component_version = "1.0.0"
-    def core_ktx_version = "1.1.0"
+    def material_component_version = "1.1.0"
+    def core_ktx_version = "1.2.0"
     def constraint_layout_version = "1.1.3"
-    def lifecycle_version = "2.1.0"
+    def lifecycle_version = "2.2.0"
     def rx_android_version = "2.1.1"
     def rx_java_version = "2.2.10"
     def timber_version = "4.7.1"
     def recyclerview_version = "1.2.0-alpha01"
-    def appcompat_version = "1.2.0-alpha01"
+    def appcompat_version = "1.2.0-alpha02"
     def alert_version = "1.2.0"
     def circleimageview_version = "2.2.0"
+    def room_version = "1.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Kotlin
@@ -87,9 +94,13 @@ dependencies {
     // Circle imageview
     implementation "de.hdodenhof:circleimageview:$circleimageview_version"
 
+    // Room
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
